fix small layout bugs and wording for iframe

--- a/app/assets/stylesheets/application/main.sass
+++ b/app/assets/stylesheets/application/main.sass
@@ -16,12 +16,14 @@ body
 h1
   font-family: Georgia, 'Palatino Linotype', Impact
   font-size: 50px
+  line-height: 60px
   font-style: italic
   color: #2f2f2f
 
 h2
   font-family: Georgia, 'Palatino Linotype', Impact
   font-size: 30px
+  line-height: 35px
   font-style: italic
   color: #2f2f2f
 
