--- a/app/assets/stylesheets/application/members.sass
+++ b/app/assets/stylesheets/application/members.sass
@@ -133,7 +133,7 @@ form#edit_member
       td
         text-align: left
         vertical-align: top
-        width: 600px
+        width: 570px
         height: 40px
         padding-left: 10px
         p
